--- a/full-stack-job-portal-server-main/package.json
+++ b/full-stack-job-portal-server-main/package.json
@@ -22,6 +22,7 @@
         "http-errors": "^2.0.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.0.0",
+        "morgan": "^1.10.0",
         "nanoid": "3",
         "nodemailer": "^6.10.0"
     }
